--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ image = "0.24"
 itertools = "0.11"
 num = "0.4"
 serde = { version = "1.0", features = ["derive"], optional = true }
-uuid = { version = "1.3.3", features = ["serde", "v4"] }
+uuid = { version = "1.10.0", features = ["serde", "v4"], default-features = false }
 
 [build-dependencies]
 xmltree = "0.8.0"
